# relation-tool-examples

./: .gitignore  LICENSE  README.md  relation-tool-examples.cabal  stack.yaml
.stack-work/install/x86_64-linux/lts-6.13/7.10.3/flag-cache/: relation-tool-0.1.0.0-dbf9f265f48fcba310ce4bdd03673e62  relation-tool-examples-0.1.0.0
.stack-work/install/x86_64-linux/lts-6.13/7.10.3/lib/x86_64-linux-ghc-7.10.3/relation-tool-0.1.0.0-8Cyn3M6UKgN11sASBif9n4/: Algebra.dyn_hi  Algebra.hi  Relvar.dyn_hi  Relvar.hi
.stack-work/install/x86_64-linux/lts-6.13/7.10.3/lib/x86_64-linux-ghc-7.10.3/relation-tool-0.1.0.0-8Cyn3M6UKgN11sASBif9n4/Algebra/: Function.dyn_hi  Function.hi
.stack-work/install/x86_64-linux/lts-6.13/7.10.3/lib/x86_64-linux-ghc-7.10.3/relation-tool-0.1.0.0-8Cyn3M6UKgN11sASBif9n4/Relvar/: CSV.dyn_hi  CSV.hi  LSet.dyn_hi  LSet.hi  Pretty.dyn_hi  Pretty.hi
.stack-work/install/x86_64-linux/lts-6.13/7.10.3/lib/x86_64-linux-ghc-7.10.3/relation-tool-0.1.0.0-8Cyn3M6UKgN11sASBif9n4/Relvar/Pretty/: BoxesText.dyn_hi  BoxesText.hi
.stack-work/install/x86_64-linux/lts-6.13/7.10.3/pkgdb/: package.cache  relation-tool-0.1.0.0-dbf9f265f48fcba310ce4bdd03673e62.conf
app/: Basics.hs  CJDate.hs  CSV.hs  Main.hs  olympics2016_medalists.csv  olympics2016_results.csv
