name:                relation-tool-examples
version:             0.1.0.0
synopsis:            Examples for the relation-tool library
description:         Examples for the relation-tool library (see README.md).
homepage:            https://github.com/janthelme/relation-tool-examples#readme
license:             BSD3
license-file:        LICENSE
author:              JAnthelme
maintainer:          janthelme@gmail.com
copyright:           Copyright: (c) 2016 Janthelme
category:            Data Structure
build-type:          Simple
extra-doc-files:  README.md
cabal-version:       >=1.10

executable relation-tool-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , relation-tool
                     , text, time, bytestring, containers
                     , ansi-terminal
                     -- temporary
                     , directory
  default-language:    Haskell2010

executable basics-exe
  hs-source-dirs:      app
  main-is:             Basics.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , relation-tool
                     , text, time, bytestring, containers
                     , ansi-terminal
                     -- temporary
                     , directory
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/janthelme/relation-tool-examples
